--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Dmitry Kuznetsov",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "8.34.0"
+    "eslint": "8.34.0",
+    "prettier": "2.8.4"
   }
 }
