--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "eslint": "8.34.0",
+    "eslint-config-prettier": "^8.6.0",
     "prettier": "2.8.4"
   }
 }
