--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "eslint": "8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "prettier": "2.8.4"
+  },
+  "dependencies": {
+    "mongodb": "^5.0.1"
   }
 }
