--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:repository": "jest src/tests/repository"
   },
   "author": "Dmitry Kuznetsov",
   "license": "ISC",
   "devDependencies": {
     "eslint": "8.34.0",
     "eslint-config-prettier": "^8.6.0",
+    "jest": "^29.4.3",
     "prettier": "2.8.4"
   },
   "dependencies": {
