--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint": "8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "jest": "^29.4.3",
+    "nodemon": "^2.0.20",
     "prettier": "2.8.4"
   },
   "dependencies": {
