--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prettier": "2.8.4"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "fastify": "^4.13.0",
     "mongodb": "^5.0.1"
   }
