--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "fastify": "^4.13.0",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.0.1"
   }
 }
