--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prettier": "2.8.4"
   },
   "dependencies": {
+    "@fastify/multipart": "^7.4.1",
     "dotenv": "^16.0.3",
     "fastify": "^4.13.0",
     "jsonwebtoken": "^9.0.0",
