--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prettier": "2.8.4"
   },
   "dependencies": {
+    "@fastify/jwt": "^6.6.0",
     "@fastify/multipart": "^7.4.1",
     "@fastify/static": "^6.9.0",
     "dotenv": "^16.0.3",
