feat: install fastify plugin

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fastify/static": "^6.9.0",
     "dotenv": "^16.0.3",
     "fastify": "^4.13.0",
+    "fastify-plugin": "^4.5.0",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.0.1"
   }
