--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "@fastify/jwt": "^6.6.0",
     "@fastify/multipart": "^7.4.1",
+    "@fastify/swagger": "^8.3.1",
+    "@fastify/swagger-ui": "^1.7.0",
     "dotenv": "^16.0.3",
     "fastify": "^4.13.0",
     "fastify-plugin": "^4.5.0",
