--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-config-prettier": "^8.6.0",
     "jest": "^29.4.3",
     "nodemon": "^2.0.20",
+    "pino-pretty": "^10.0.0",
     "prettier": "2.8.4"
   },
   "dependencies": {
@@ -26,6 +27,7 @@
     "fastify": "^4.13.0",
     "fastify-plugin": "^4.5.0",
     "jsonwebtoken": "^9.0.0",
-    "mongodb": "^5.0.1"
+    "mongodb": "^5.0.1",
+    "pino": "^8.11.0"
   }
 }
