--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prettier": "2.8.4"
   },
   "dependencies": {
+    "@fastify/cors": "^8.2.1",
     "@fastify/jwt": "^6.6.0",
     "@fastify/swagger": "^8.3.1",
     "@fastify/swagger-ui": "^1.7.0",
